# filecheck

./: .travis.yml  Cargo.toml  README.md  publish-all.sh  test-all.sh
lib/test/: Cargo.toml
lib/test/src/: lib.rs
src/: checker.rs  cton-util.rs  error.rs  explain.rs  lib.rs  pattern.rs  variable.rs
tests/: basic.rs  filetests.rs
