[package]
authors = ["The Cretonne Project Developers"]
name = "filecheck"
version = "0.2.1"
description = "Library for writing tests for utilities that read text files and produce text output"
license = "Apache-2.0"
repository = "https://github.com/Cretonne/filecheck"
documentation = "https://docs.rs/filecheck"
readme = "README.md"
keywords = ["test"]

[lib]
name = "filecheck"

[dependencies]
regex = "0.2.6"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "Cretonne/filecheck" }
