[package]
authors = ["The Cranelift Project Developers"]
name = "filecheck"
version = "0.3.0"
description = "Library for writing tests for utilities that read text files and produce text output"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/Cranelift/filecheck"
documentation = "https://docs.rs/filecheck"
readme = "README.md"
keywords = ["test"]

[lib]
name = "filecheck"

[dependencies]
regex = "1"
failure = "0.1.1"
failure_derive = "0.1.1"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "Cranelift/filecheck" }
