[package]
name = "cretonne-test"
authors = ["The Cretonne Project Developers"]
version = "0.3.4"
description = "Test driver and implementations of the test commands"
license = "Apache-2.0"
documentation = "http://cretonne.readthedocs.io/en/latest/testing.html#file-tests"
repository = "https://github.com/Cretonne/cretonne"
publish = false

[lib]
name = "cton_test"

[dependencies]
cretonne = { path = "../cretonne", version = "0.3.4" }
cretonne-reader = { path = "../reader", version = "0.3.4" }
filecheck = { path = "../filecheck", version = "0.1.0" }
num_cpus = "1.5.1"
